# Body-and-Organ-Analysis

./: .dockerignore  .env_sample  .flake8  .gitattributes  .gitignore  .markdownlint.json  .mypy.ini  .pre-commit-config.yaml  Makefile  README.md  TODO.md  advanced.config  docker-compose-win.yml  docker-compose.yml  init.sql  nginx.conf  orthanc.json  package-lock.json  package.json  pyproject.toml  requirements.txt  test.py
.github/workflows/: docker-image.yml  docker-test.yml  lint-test.yml  mypy-flake-test.yml  pre-commit-test-orig.yml  pre-commit-test.yml  python-publish.yml
body_organ_analysis/: __init__.py  __main__.py  _version.py  _weasyprint_env.py  banner.py  cli.py  commands.py
body_organ_analysis/_external/body_composition_analysis/: __main__.py  commands.py  io.py  tasks.py
body_organ_analysis/_external/body_composition_analysis/body_parts/: definition.py  postprocess.py
body_organ_analysis/_external/body_composition_analysis/body_regions/: definition.py  postprocess.py
body_organ_analysis/_external/body_composition_analysis/infer/: infer.py
body_organ_analysis/_external/body_composition_analysis/report/: builder.py
body_organ_analysis/_external/body_composition_analysis/report/plots/: aggregation.py  check.py  colors.py  heatmaps.py  overlay.py  overview.py
body_organ_analysis/_external/body_composition_analysis/report/template/: report.html.jinja
body_organ_analysis/_external/body_composition_analysis/tissue/: subclassification.py
body_organ_analysis/_external/nnunet/: __init__.py  configuration.py
body_organ_analysis/_external/nnunet/evaluation/: add_mean_dice_to_json.py  evaluator.py  metrics.py  region_based_evaluation.py
body_organ_analysis/_external/nnunet/experiment_planning/: change_batch_size.py  experiment_planner_baseline_2DUNet.py  experiment_planner_baseline_3DUNet.py  nnUNet_plan_and_preprocess.py
body_organ_analysis/_external/nnunet/inference/: ensemble_predictions.py  inference_model.py  predict.py  predict_simple.py  segmentation_export.py
body_organ_analysis/_external/nnunet/network_architecture/: generic_UNet_DP.py  generic_modular_UNet.py  neural_network.py
body_organ_analysis/_external/nnunet/postprocessing/: connected_components.py  consolidate_all_for_paper.py  consolidate_postprocessing_simple.py
body_organ_analysis/_external/nnunet/run/: default_configuration.py  run_training_DDP.py  run_training_DP.py
body_organ_analysis/_external/nnunet/utilities/: folder_names.py  set_n_proc_DA.py  task_name_id_conversion.py
body_organ_analysis/_external/nnunetv2/: __init__.py
body_organ_analysis/_external/totalsegmentator/: TotalSegmentator.py  __init__.py  alignment.py  cropping.py  dicom_io.py  libs.py  map_to_binary.py  nnunet.py  nnunet_env.py  postprocessing.py  preview.py  resampling.py  task_info.py  vtk_utils.py
body_organ_analysis/_external/totalsegmentator/resources/: totalsegmentator_snomed_mapping.csv
body_organ_analysis/compute/: bca_metrics.py  config.py  constants.py  geometry.py  inference.py  io.py  measurements.py  ts_metrics.py  util.py
body_organ_analysis/templates/: covid-meta.json  liver_vessels-meta.json  pleural_pericard_effusion-meta.json  tissues-meta.json  total-meta.json
body_organ_analyzer/: __init__.py  __main__.py  _version.py  cli.py  commands.py
body_organ_analyzer/_external/body_composition_analysis/: __init__.py  cli.py  commands.py  io.py
body_organ_analyzer/_external/body_composition_analysis/bmd/: compute.py  definition.py
body_organ_analyzer/_external/body_composition_analysis/body_parts/: definition.py
body_organ_analyzer/_external/body_composition_analysis/report/: builder.py
body_organ_analyzer/_external/body_composition_analysis/tissue/: definition.py
body_organ_analyzer/_external/nnunet/: paths.py
body_organ_analyzer/_external/nnunet/evaluation/: collect_results_files.py
body_organ_analyzer/_external/nnunet/experiment_planning/: DatasetAnalyzer.py  common_utils.py  experiment_planner_baseline_2DUNet_v21.py  experiment_planner_baseline_3DUNet_v21.py  nnUNet_convert_decathlon_task.py  summarize_plans.py  utils.py
body_organ_analyzer/_external/nnunet/inference/: change_trainer.py  predict.py
body_organ_analyzer/_external/nnunet/network_architecture/: generic_UNet.py  generic_modular_preact_residual_UNet.py  generic_modular_residual_UNet.py
body_organ_analyzer/_external/nnunet/postprocessing/: consolidate_postprocessing.py
body_organ_analyzer/_external/nnunet/preprocessing/: cropping.py  preprocessing.py  sanity_checks.py
body_organ_analyzer/_external/nnunet/run/: load_pretrained_weights.py  run_training.py
body_organ_analyzer/_external/nnunet/training/: model_restore.py
body_organ_analyzer/_external/nnunet/utilities/: file_conversions.py  image_reorientation.py  overlay_plots.py  recursive_rename_taskXX_to_taskXXX.py
body_organ_analyzer/_external/totalsegmentator/: __init__.py  libs.py  map_to_binary.py  measurements.py  nifti_ext_header.py  nnunet.py  postprocessing.py  preview.py  resampling.py  statistics.py  store_models_as_onnx.py  util.py
body_organ_analyzer/compute/: bca_metrics.py  constants.py  geometry.py  inference.py  io.py  measurements.py  ts_metrics.py  util.py
body_organ_analyzer/templates/: body-parts-meta.json  body-regions-meta.json  cerebral_bleed-meta.json  coronary_arteries-meta.json  hip_implant-meta.json  lung_vessels_airways-meta.json  pulmonary_fat-meta.json
documentation/: command_line.md  environment_variables.md  pacs_integration.md
example_scripts/: process_file.sh  process_lib.sh
scripts/: celery_task.py  cli.dockerfile  cli_macos.dockerfile  download_weights.py  entrypoint.sh  generate_version.sh  imports.py  on_change_callback.py  orthanc.dockerfile  rabbitmq.dockerfile  task.dockerfile  task_gpu.dockerfile  test_boa.py  util.py  worker_cpu.dockerfile  worker_gpu.dockerfile
tests/: _paths.py  _state.py  conftest.py  test_boa.py  test_cli.py  test_config.py  test_gating.py  test_generated_files.py  test_imports.py  test_results.py  test_scripts_util.py
(+171 files in other folders)
