[build-system]
build-backend = "hatchling.build"
requires = [ "hatchling>=1.29" ]

[project]
name = "body-organ-analysis"
version = "0.2.0"
description = """\
  BOA is a tool for segmentation of CT scans developed by the SHIP-AI group at the Institute for Artificial \
  Intelligence in Medicine (https://ship-ai.ikim.nrw/). Combining the TotalSegmentator and the Body Composition \
  Analysis, this tool is capable of analyzing medical images and identifying the different structures within the human \
  body, including bones, muscles, organs, and blood vessels.\
  """
readme = "README.md"
keywords = [ "boa", "body composition analysis", "nnunet", "python", "segmentation" ]
license = "Apache-2.0"
authors = [
  { name = "Jannis Straus", email = "jannis.straus@uk-essen.de" },
]
requires-python = ">=3.11,<3.14"
classifiers = [
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]
dependencies = [
  "acvl-utils>=0.2.5",
  # "totalsegmentator==2.12.0",
  # "nnunetv2==2.6.4",
  "batchgeneratorsv2>=0.3",
  "boa-contrast>=0.1.5,<0.2",
  "dataclasses-json>=0.5.7,<1",
  "dynamic-network-architectures>=0.4.3",
  "fury>=0.8,<1",
  "jinja2>=3.0.3,<4",
  "kaleido==0.2.1",
  "matplotlib>=3.6.2,<4",
  "medpy>=0.4,<1",
  "nibabel>=5.1,<6",
  "numpy>=1.24,<2",
  "p-tqdm>=1.4,<2",
  "pandas>=2,<3",
  "plotly>=5.3.1,<6",
  "psutil>=5.9.4,<6",
  "pydicom>=3,<4",
  "pywavelets>=1.1.1,<2",
  "requests>=2.28.2,<3",
  "scikit-image<=0.28",                   # binary_erosion -> erosion, with different results for kernel 6
  "scikit-learn==1.3",                    # BOA-Contrast
  "seaborn>=0.13.2",
  "simpleitk>=2.0.1,<3",
  "tqdm>=4.45,<5",
  "unidecode>=1.3.6,<2",
  "weasyprint>=52.5,<53",
  "xlsxwriter>=3.1.2,<4",
  "xvfbwrapper>=0.2.9,<1",
]
optional-dependencies.pacs = [
  "celery==5.6.3",
  "dicomweb-client>=0.59,<1",
  "psycopg2-binary>=2.9.9,<3",
  "pydicom-seg>=0.4.1,<0.5",
  "smbprotocol>=1.10.1,<2",
]
optional-dependencies.storage = [
  "dicomweb-client>=0.59,<1",
  "pydicom-seg>=0.4.1,<0.5",
  "smbprotocol>=1.10.1,<2",
]
optional-dependencies.triton = [
  "tritonclient[grpc]>=2.5,<3",
]
urls.Repository = "https://github.com/UMEssen/Body-and-Organ-Analyzer"
scripts.body_organ_analyzer = "body_organ_analyzer.cli:run"

[dependency-groups]
dev = [
  "pre-commit>=4.5.1,<5",
]

[tool.hatch]
build.targets.wheel.packages = [ "body_organ_analysis" ]

[tool.ruff]
# Same as Black
line-length = 88
lint.select = [
  "B",    # flake8-bugbear
  "C",    # flake8-comprehensions
  "D401", # First line of docstring should be in imperative mood
  "E",    # pycodestyle errors
  "EXE",  # flake8-executable
  "F",    # pyflakes
  "I",    # isort
  "PL",   # pylint
  "RUF",  # ruff
  "W",    # pycodestyle warnings
]
lint.ignore = [
  "C901",    # Is too complex
  "D100",    # Missing docstring in public module
  "D101",    # Missing docstring in public class
  "D104",    # Missing docstring in public package
  "D105",    # Missing docstring in magic method
  "E501",    # line too long, handled by black
  "PLR0912", # Too many branches
  "PLR0913", # Too many arguments in function definition
  "PLR0915", # Too many statements
  "PLR2004", # Magic value used in comparison
]
lint.unfixable = [
  "F401", # Do not fix unused imports, it's annoying during development
]
lint.pydocstyle.convention = "google"

[tool.mypy]
# Ensure full coverage
check_untyped_defs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
disallow_untyped_decorators = true
# Restrict dynamic typing
disallow_any_generics = true
disallow_subclassing_any = true
warn_return_any = true
# Know exactly what you're doing
warn_redundant_casts = true
warn_unused_ignores = true
warn_unused_configs = true
warn_unreachable = true
show_error_codes = true

[tool.pymarkdown]
plugins.md013.code_blocks = false
plugins.md013.line_length = 80

[virtualenvs]
create = true
in-project = true
